--- a/css/styles.css
+++ b/css/styles.css
@@ -4,11 +4,13 @@
   box-sizing: border-box; }
 
 body {
-  margin: 0; }
+  margin: 0;
+  background-color: rgba(121, 143, 183, 0.16); }
 
 video {
   width: 100%;
-  align-content: center; }
+  align-content: center;
+  border-radius: 4px; }
 
 .main-container {
   width: 100%;
@@ -18,13 +20,22 @@ video {
 .video-container {
   background-size: 60%;
   position: relative;
-  color: white; }
+  color: white;
+  border-radius: 1px;
+  margin: 5px 5px 0; }
 
 .player-container {
   position: absolute;
   width: 100%;
   height: 20px;
   bottom: 13px; }
+
+.caption-paragraph {
+  width: 95%;
+  margin: 25px auto 0;
+  background-color: rgba(0, 0, 0, 0.05);
+  padding: 5px;
+  border-radius: 1px; }
 
 #play-pause-btn {
   background-image: url("../video_player/icons/play-icon.png");
@@ -112,10 +123,11 @@ span {
 .dblClick, .singleClick {
   width: 120px;
   height: 15px;
-  margin: 0 auto;
+  margin: 0 auto 1px;
   display: block;
   padding-bottom: 0;
-  font-size: .5em; }
+  font-size: .5em;
+  border-radius: 11px; }
 
 .progress-bar-container {
   width: 95%;
@@ -172,12 +184,16 @@ progress::-webkit-progress-value {
   .main-container {
     width: 75%; }
 
+  .video-container {
+    margin: 10px auto 0; }
+
   #vol-slider {
     display: inline-block;
     width: 20%; }
 
   #text-slider {
-    display: inline-block; }
+    display: inline-block;
+    width: 15%; }
 
   .font-size-slider {
     display: inline-block; } }
