--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -6,12 +6,14 @@
 
 body {
   margin: 0; 
+  background-color: rgba(121, 143, 183, 0.16);
 }
 
 video { 
  
   width: 100%; 
-  align-content: center; 
+  align-content: center;
+  border-radius: 4px; 
   }
 
 
@@ -25,7 +27,9 @@ video {
 .video-container {
   background-size: 60%; 
   position: relative; 
-  color: white; 
+  color: white;
+  border-radius: 1px; 
+  margin: 5px 5px 0; 
  }
 
 .player-container {
@@ -33,4 +37,12 @@ video {
   width: 100%;
   height: 20px; 
   bottom: 13px; 
+}
+
+.caption-paragraph {
+    width: 95%; 
+    margin: 25px auto 0; 
+    background-color: rgba(0,0,0,.05);
+    padding: 5px;
+    border-radius: 1px; 
 }
